Fix z-index of navbar items

--- a/src/components/Navbar/index.css
+++ b/src/components/Navbar/index.css
@@ -41,7 +41,7 @@ $menu-icon-size: 30px;
 .fixed {
   position: fixed;
   top: 0;
-  z-index: 2;
+  z-index: 3;
 
   width: 100%;
   height: 100%;
@@ -151,7 +151,7 @@ $menu-icon-size: 30px;
 
 :global {
   .ReactModal__Overlay {
-    z-index: 2;
+    z-index: 3;
 
     background-color: transparent !important;
     opacity: 0;
